Don't trample on all h2's, only the header one

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -58,25 +58,25 @@ body {
 		/*---------------------------------------------------------------------------------------
 			HEADER - TITLES
 		---------------------------------------------------------------------------------------*/
-		h1{
+		#header h1 {
 			position: absolute;
 			top: 35px;
 			left: 370px;
 			overflow: hidden;
 		}
 	
-		h1,h1 a{
+		#header h1,h1 a {
 			width: 300px;
 			height:300px;
 		}
 		
-		h1 a{
+		#header h1 a {
 			display: block;
 			text-indent: -9999px;
 			background: url(/images/dcr-header-bauble.png) 0 0  no-repeat;
 		}
 		
-		h2{
+		#header h2 {
 			position: absolute;
 			top: 21px;
 			left: 318px;
