--- a/public/css/style.css
+++ b/public/css/style.css
@@ -60,20 +60,20 @@ body {
 		---------------------------------------------------------------------------------------*/
 		#header h1 {
 			position: absolute;
-			top: 35px;
-			left: 370px;
+			top: 75px;
+			left: 311px;
 			overflow: hidden;
 		}
 	
 		#header h1,h1 a {
-			width: 300px;
-			height:300px;
+			width: 351px;
+			height: 246px;
 		}
 		
 		#header h1 a {
 			display: block;
 			text-indent: -9999px;
-			background: url(/images/dcr-header-bauble.png) 0 0  no-repeat;
+			background: url(/images/dcr-header-logo.png) 0 0 no-repeat;
 		}
 		
 		#header h2 {
