Add cheatsheet to doc-list.tt include

--- a/views/includes/doc-list.tt
+++ b/views/includes/doc-list.tt
@@ -1,4 +1,6 @@
 <ul>
+    <li><a href="/cheatsheet">A cheatsheet</a> (PDF or ODS) by Vladimir Lettiev
+    (thecrux)</li>
     <li><a href="http://p3rl.org/Dancer::Introduction">Dancer::Introduction</a>
     - a gentle introduction to Dancer</li>
     <li><a href="http://p3rl.org/Dancer::Tutorial">Dancer::Tutorial</a> - a
