--- a/views/cheatsheet.tt
+++ b/views/cheatsheet.tt
@@ -8,7 +8,7 @@ DSL keywords etc.
 
 <ul>
 <li><a href="/resources/dancer-cheat-sheet.pdf">PDF (94.7KB)</a></li>
-<li><a href="/resources/dancer-cheat-sheet.pdf">ODS (44.9KB)</li>
+<li><a href="/resources/dancer-cheat-sheet.ods">ODS (44.9KB)</a></li>
 </ul>
 
 <p>
