add a .html extension to most autopages

--- a/views/documentation.tt
+++ b/views/documentation.tt
@@ -43,6 +43,6 @@ in order to provide working configuration examples.
 
 <p>
 Even though special care is given to documentation, there might be some 
-errors, so feel free to <a href="/about">contact the development team</a> if
+errors, so feel free to <a href="/about.html">contact the development team</a> if
 you find any.
 </p>
