--- a/views/includes/doc-list.tt
+++ b/views/includes/doc-list.tt
@@ -1,5 +1,5 @@
 <ul>
-    <li><a href="/cheatsheet">A cheatsheet</a> (PDF or ODS) by Vladimir Lettiev
+    <li><a href="/cheatsheet.html">A cheatsheet</a> (PDF or ODS) by Vladimir Lettiev
     (thecrux)</li>
     <li><a href="http://p3rl.org/Dancer::Introduction">Dancer::Introduction</a>
     - a gentle introduction to Dancer</li>
