--- a/views/about.tt
+++ b/views/about.tt
@@ -37,14 +37,14 @@ Search the mailing list: <input type=text name="q" size=20 value=""/>
 
 <p>
 It's also possible to use GitHub to submit a patch, see the <a
-href="/contribute">contribute</a> page for more details about collaborating in
+href="/contribute.html">contribute</a> page for more details about collaborating in
 Dancer development.
 </p>
 
 <p>
 You can also reach the development team on <code>irc.perl.org</code>, 
 chan <code>#dancer</code>.  If you don't have an IRC client available, you can
-<a href="/irc">connect using Mibbit web IRC</a>.
+<a href="/irc.html">connect using Mibbit web IRC</a>.
 </p>
 
 <script type="text/javascript">
