--- a/views/download.tt
+++ b/views/download.tt
@@ -24,5 +24,5 @@ Or even <a href="http://github.com/sukria/Dancer/toggle_watch">follow the Dancer
 </p>
 
 <p>
-Find details about bug reports and patch submission <a href="/contribute">there</a>.
+Find details about bug reports and patch submission <a href="/contribute.html">there</a>.
 </p>
