--- a/views/testimonials-display.tt
+++ b/views/testimonials-display.tt
@@ -14,6 +14,6 @@
 <h3>What do <strong>you</strong> think?</h3>
 
 <p>
-We'd love to hear what you think of Dancer!  Let us know, <a href="/irc">via
+We'd love to hear what you think of Dancer!  Let us know, <a href="/irc.html">via
 IRC</a>, on the mailing list, by smoke signals - whatever you like!
 </p>
