add a / to the /slides page

--- a/views/contribute.tt
+++ b/views/contribute.tt
@@ -27,7 +27,7 @@ Ratings</a></li>
 <li><a href="https://github.com/sukria/Dancer">&quot;Watch&quot; the project on
 GitHub</a></li>
 <li>Dancer-related presentations at conferences etc (see the <a
-href="/slides">slides page</a> for inspiration)
+href="/slides/">slides page</a> for inspiration)
 </ul>
 
 <p>
