--- a/views/layouts/main.tt
+++ b/views/layouts/main.tt
@@ -56,7 +56,7 @@
 			<li><a href="/contribute.html" title="Contributing to the project">Contribute</a></li>
 			<li class="nav-sep"></li>
 
-			<li><a href="/dancefloor" title="Who's using Dancer">Dancers</a></li>
+			<li><a href="/dancefloor.html" title="Who's using Dancer">Dancers</a></li>
 			<li class="nav-sep"></li>
 
                         <li><a href="/slides/" title="Presentation slides">Slides</a></li>
