--- a/views/contribute.tt
+++ b/views/contribute.tt
@@ -63,10 +63,10 @@ users...
 
 <p>
 Feel free to <a
-href="http://lists.perldancer.org/cgi-bin/listinfo/dancer-users">subscribe to  the
+href="http://lists.preshweb.co.uk/mailman/listinfo/dancer-users">subscribe to  the
 mailing list</a> if you want to contact users and developers of the project,
 either to get or offer help. You can also check out the <a
-href="http://lists.perldancer.org/pipermail/dancer-users/">list archives</a>.
+href="http://lists.preshweb.co.uk/pipermail/dancer-users/">list archives</a>.
 
 
 
