New mailing list URL here too

--- a/views/about.tt
+++ b/views/about.tt
@@ -23,9 +23,9 @@ Dancer is free software, it is released under the same terms as Perl itself.
 
 <p>
 Feel free to <a
-href="http://lists.perldancer.org/cgi-bin/listinfo/dancer-users">subscribe to 
+href="http://lists.preshweb.co.uk/mailman/listinfo/dancer-users">subscribe to 
 the mailing list</a> if you want to contact users and developers of the project. 
-You can also <a href="http://lists.perldancer.org/pipermail/dancer-users/">read
+You can also <a href="http://lists.preshweb.co.uk/pipermail/dancer-users/">read
 the list archives</a>.
 
 <form target="_blank" action="http://www.google.com/search" method="get">
