--- a/public/css/style.css
+++ b/public/css/style.css
@@ -72,20 +72,21 @@ body {
 		}
 	
 		#header h1,h1 a{
-			/* normal (non-Christmas):
+			/* normal (non-Christmas): */
                         width: 351px;
 			height: 246px;
-                        */
-                        /* Christmas: */
+                        
+                        /* Christmas:
                         width: 300px;
-                        height: 300px;
+                        height: 300px; */
 		}
 		
 		#header h1 a{
 			display: block;
 			text-indent: -9999px;
-			/* background: url(/images/dcr-header-logo.png) 0 0 no-repeat; */
-			background: url(/images/dcr-header-bauble.png) 0 0 no-repeat;
+			background: url(/images/dcr-header-logo.png) 0 0 no-repeat;
+			/* background: url(/images/dcr-header-bauble.png) 0 0
+                         * no-repeat; */
 		}
 		
 		#header h2{
