--- a/views/slides.tt
+++ b/views/slides.tt
@@ -1,71 +1,19 @@
 <h3>Presenting Dancer - slides from Dancer talks around the world</h3>
 
-
-
-<p><strong>
-<a href="http://www.slideshare.net/asukrieh/writing-webapps-with-perl-dancer">
-Writing webapps with Perl Dancer</a>
-</strong></p>
+<p><strong>Modern PerlCommerce</strong></p>
 
 <p>
-Given by Alexis Sukrieh at OSDCfr 2009
+Given at <a href="http://pghpw.org/ppw2011/">Pittsburgh Perl Workshop 2011</a> by Stefan Hornburg (Racke)
 </p>
-
-
-<object id="__sse2116491" width="595" height="497"><param name="movie" value="http://static.slidesharecdn.com/swf/ssplayer2.swf?doc=osdcfr2009-dancer-091003101341-phpapp02&stripped_title=writing-webapps-with-perl-dancer&userName=asukrieh" /> <param name="allowFullScreen" value="true"/> <param name="allowScriptAccess" value="always"/> <embed name="__sse2116491" src="http://static.slidesharecdn.com/swf/ssplayer2.swf?doc=osdcfr2009-dancer-091003101341-phpapp02&stripped_title=writing-webapps-with-perl-dancer&userName=asukrieh" type="application/x-shockwave-flash" allowscriptaccess="always" allowfullscreen="true" width="595" height="497"></embed> </object> 
+<object id="__sse9656888" width="425" height="355"> <param name="movie" value="http://static.slidesharecdn.com/swf/ssplayer2.swf?doc=perlcommerce-beamer-111012060740-phpapp02&stripped_title=modern-perlcommerce&userName=linuxia" /> <param name="allowFullScreen" value="true"/> <param name="allowScriptAccess" value="always"/> <embed name="__sse9656888" src="http://static.slidesharecdn.com/swf/ssplayer2.swf?doc=perlcommerce-beamer-111012060740-phpapp02&stripped_title=modern-perlcommerce&userName=linuxia" type="application/x-shockwave-flash" allowscriptaccess="always" allowfullscreen="true" width="425" height="355"></embed> </object>
 
 <p>
-You can also view and download this in
-<a href="/slides/osdcfr2009-dancer.odp">OpenOffice ODP format</a>.
+You can also view and download this in <a href="/slides/perlcommerce-beamer.pdf">PDF format</a>
 </p>
-
 
 <hr />
 
-
-
-<p><strong>
-<a href="http://www.slideshare.net/asukrieh/perl-dancer-fpw-2010-4482016">
-Perl Dancer, FPW 2010</a>
-</strong>
-</p>
-
-<p>
-Given by Alexis Sukrieh at French Perl Workshop, 11th June 2010, Calais
-</p>
-
-<object id="__sse4482016" width="595" height="497"> <param name="movie" value="http://static.slidesharecdn.com/swf/ssplayer2.swf?doc=fpw2010-perldancer-100612140837-phpapp01&stripped_title=perl-dancer-fpw-2010-4482016&userName=asukrieh" /> <param name="allowFullScreen" value="true"/> <param name="allowScriptAccess" value="always"/> <embed name="__sse4482016" src="http://static.slidesharecdn.com/swf/ssplayer2.swf?doc=fpw2010-perldancer-100612140837-phpapp01&stripped_title=perl-dancer-fpw-2010-4482016&userName=asukrieh" type="application/x-shockwave-flash" allowscriptaccess="always" allowfullscreen="true" width="595" height="497"></embed> </object>
-
-<p>You can also view and download this in
-<a href="/slides/perl-dancer-fpw-2010.odp">OpenOffice ODP format</a>.</p>
-
-
-
-<hr />
-
-
-
-<p><strong>
-<a href="http://www.slideshare.net/xSawyer/perl-dancer-for-python-programmers" title="Perl Dancer for Python programmers">
-Perl Dancer for Python programmers</a>
-</strong></p>
-
-<p>(Given by Sawyer at PyWebIL, Oct 4th 2010 in Israel)</p>
-
-
-
-<object id="__sse5369570" width="595" height="497"> <param name="movie" value="http://static.slidesharecdn.com/swf/ssplayer2.swf?doc=dancer-101006033841-phpapp01&stripped_title=perl-dancer-for-python-programmers&userName=xSawyer" /> <param name="allowFullScreen" value="true"/> <param name="allowScriptAccess" value="always"/> <embed name="__sse5369570" src="http://static.slidesharecdn.com/swf/ssplayer2.swf?doc=dancer-101006033841-phpapp01&stripped_title=perl-dancer-for-python-programmers&userName=xSawyer" type="application/x-shockwave-flash" allowscriptaccess="always" allowfullscreen="true" width="595" height="497"></embed> </object>
-
-<p>
-You can also view and download this in 
-<a href="/slides/dancer-for-python-programmers.pdf">PDF format</a>
-</p>
-
-
-
-<hr />
-
-
+<p><strong>Dancing Tutorial</strong></p>
 
 <p><strong>
 <a href="http://www.slideshare.net/hashashin/dancing-tutorial">
@@ -85,20 +33,54 @@ Given by Alberto Simoes at Braga Geek Nights, March 1st. 2011
 You can also view and download this in 
 <a href="/slides/dancing-tutorial.pdf">PDF format</a></p>
 
+<hr />
 
+<p><strong>
+<a href="http://www.slideshare.net/xSawyer/perl-dancer-for-python-programmers" title="Perl Dancer for Python programmers">
+Perl Dancer for Python programmers</a>
+</strong></p>
+
+<p>(Given by Sawyer at PyWebIL, Oct 4th 2010 in Israel)</p>
+
+<object id="__sse5369570" width="595" height="497"> <param name="movie" value="http://static.slidesharecdn.com/swf/ssplayer2.swf?doc=dancer-101006033841-phpapp01&stripped_title=perl-dancer-for-python-programmers&userName=xSawyer" /> <param name="allowFullScreen" value="true"/> <param name="allowScriptAccess" value="always"/> <embed name="__sse5369570" src="http://static.slidesharecdn.com/swf/ssplayer2.swf?doc=dancer-101006033841-phpapp01&stripped_title=perl-dancer-for-python-programmers&userName=xSawyer" type="application/x-shockwave-flash" allowscriptaccess="always" allowfullscreen="true" width="595" height="497"></embed> </object>
+
+<p>
+You can also view and download this in 
+<a href="/slides/dancer-for-python-programmers.pdf">PDF format</a>
+</p>
 
 <hr />
 
-
-
-
-<p><strong>Modern PerlCommerce</strong></p>
-
-<p>
-Given at <a href="http://pghpw.org/ppw2011/">Pittsburgh Perl Workshop 2011</a> by Stefan Hornburg (Racke)
+<p><strong>
+<a href="http://www.slideshare.net/asukrieh/perl-dancer-fpw-2010-4482016">
+Perl Dancer, FPW 2010</a>
+</strong>
 </p>
-<object id="__sse9656888" width="425" height="355"> <param name="movie" value="http://static.slidesharecdn.com/swf/ssplayer2.swf?doc=perlcommerce-beamer-111012060740-phpapp02&stripped_title=modern-perlcommerce&userName=linuxia" /> <param name="allowFullScreen" value="true"/> <param name="allowScriptAccess" value="always"/> <embed name="__sse9656888" src="http://static.slidesharecdn.com/swf/ssplayer2.swf?doc=perlcommerce-beamer-111012060740-phpapp02&stripped_title=modern-perlcommerce&userName=linuxia" type="application/x-shockwave-flash" allowscriptaccess="always" allowfullscreen="true" width="425" height="355"></embed> </object>
 
 <p>
-You can also view and download this in <a href="/slides/perlcommerce-beamer.pdf">PDF format</a>
+Given by Alexis Sukrieh at French Perl Workshop, 11th June 2010, Calais
+</p>
+
+<object id="__sse4482016" width="595" height="497"> <param name="movie" value="http://static.slidesharecdn.com/swf/ssplayer2.swf?doc=fpw2010-perldancer-100612140837-phpapp01&stripped_title=perl-dancer-fpw-2010-4482016&userName=asukrieh" /> <param name="allowFullScreen" value="true"/> <param name="allowScriptAccess" value="always"/> <embed name="__sse4482016" src="http://static.slidesharecdn.com/swf/ssplayer2.swf?doc=fpw2010-perldancer-100612140837-phpapp01&stripped_title=perl-dancer-fpw-2010-4482016&userName=asukrieh" type="application/x-shockwave-flash" allowscriptaccess="always" allowfullscreen="true" width="595" height="497"></embed> </object>
+
+<p>You can also view and download this in
+<a href="/slides/perl-dancer-fpw-2010.odp">OpenOffice ODP format</a>.</p>
+
+<hr />
+
+<p><strong>
+<a href="http://www.slideshare.net/asukrieh/writing-webapps-with-perl-dancer">
+Writing webapps with Perl Dancer</a>
+</strong></p>
+
+<p>
+Given by Alexis Sukrieh at OSDCfr 2009
+</p>
+
+
+<object id="__sse2116491" width="595" height="497"><param name="movie" value="http://static.slidesharecdn.com/swf/ssplayer2.swf?doc=osdcfr2009-dancer-091003101341-phpapp02&stripped_title=writing-webapps-with-perl-dancer&userName=asukrieh" /> <param name="allowFullScreen" value="true"/> <param name="allowScriptAccess" value="always"/> <embed name="__sse2116491" src="http://static.slidesharecdn.com/swf/ssplayer2.swf?doc=osdcfr2009-dancer-091003101341-phpapp02&stripped_title=writing-webapps-with-perl-dancer&userName=asukrieh" type="application/x-shockwave-flash" allowscriptaccess="always" allowfullscreen="true" width="595" height="497"></embed> </object> 
+
+<p>
+You can also view and download this in
+<a href="/slides/osdcfr2009-dancer.odp">OpenOffice ODP format</a>.
 </p>
