Add two additional slides.

--- a/views/slides.tt
+++ b/views/slides.tt
@@ -1,5 +1,21 @@
 <h3>Presenting Dancer - slides from Dancer talks around the world</h3>
 
+<p><strong>Writing Simple Perl webapps using Dancer</strong></p>
+
+<p>Given at the Dalhousie Faculty of Computer Science FreeSchool in March 2013 by Mike Doherty</p>
+
+<script async class="speakerdeck-embed" data-id="95fba1007d490130d18022000a1d0215" data-ratio="1.33507170795306" src="//speakerdeck.com/assets/embed.js"></script>
+
+<hr />
+
+<p><strong>Intro to Dancer</strong></p>
+
+<p>Given at <a href="http://2012.yapcna.org/">YAPC::NAA 2012</p> by Mark Allen</p>
+
+<script async class="speakerdeck-embed" data-id="4fd8f970a14e86002202f969" data-ratio="1.33333333333333" src="//speakerdeck.com/assets/embed.js"></script>
+
+<hr />
+
 <p><strong>Modern PerlCommerce</strong></p>
 
 <p>
