--- a/views/dancefloor-display.tt
+++ b/views/dancefloor-display.tt
@@ -9,9 +9,15 @@ written a website with Dancer and want it to be listed here, please
 <% FOREACH site = sites %>
     <div class="dancefloor-site <% IF site.source %>opensource<% END %> <% IF site.dancer == 2 %>dancer2<% END %>">
         <div align="center">
-            <a href="<% site.url %>"><img src="<% site.thumb_url %>" align="center"></a>
-            <br />
-            <p><b><a href="<% site.url %>"><% site.title %></a></b></p>
+            <% IF site.url %>
+                <a href="<% site.url %>"><img src="<% site.thumb_url %>" align="center"></a>
+                <br />
+                <p><b><a href="<% site.url %>"><% site.title %></a></b></p>
+            <% ELSE %>
+                <% IF site.source %>
+                    <p><b><a href="<% site.source %>"><% site.title %></a></b></p>
+                <% END %>
+            <% END %>
         </div>
         <p><% site.description %></p>
         <% IF site.source %>
