Many changes to the website, mostly involving changing links from Dancer to Dancer2.
Since the Twitter JSON API is gone, removed the last tweet from the
bottom of the page. Instead, I put a link to Dancer's Twitter account in
the footer. Seeing "Unavailable" in the footer didn't look so hot.

Since other links use MetaCPAN instead of search.cpan.org, I changed the
cpanm link to use MetaCPAN too.

Please note: the D2 deployment link will not work until a new release of
D2 happens - Dancer::Deployment gets renamed to
Dancer2::Manual::Deployment. So this change shouldn't get deployed until
that happens :)

--- a/views/contribute.tt
+++ b/views/contribute.tt
@@ -21,9 +21,9 @@ If you like Dancer, tell the world about it:
 <ul>
 <li>blog about it!</li>
 <li>tweet about  it!</li>
-<li><a href="http://cpanratings.perl.org/dist/Dancer">Rate Dancer on CPAN
+<li><a href="http://cpanratings.perl.org/dist/Dancer2">Rate Dancer on CPAN
 Ratings</a></li>
-<li><a href="http://metacpan.org/release/Dancer">Click +1 on MetaCPAN</a></li>
+<li><a href="http://metacpan.org/release/Dancer2">Click +1 on MetaCPAN</a></li>
 <li><a href="https://github.com/PerlDancer/Dancer2">&quot;Watch&quot; the project on
 GitHub</a></li>
 <li>Dancer-related presentations at conferences etc (see the <a
