Update slide sample of index page to use Dancer2 instead of Dancer.

--- a/views/index.tt
+++ b/views/index.tt
@@ -45,7 +45,7 @@
     <li>
             <pre class="prettyprint" style="margin-top: 1em; margin-bottom: 2em;">
     #!/usr/bin/env perl
-    use Dancer;
+    use Dancer2;
 
     get '/' =&gt; sub {
         "Hello World!"
