--- a/views/quickstart.tt
+++ b/views/quickstart.tt
@@ -125,7 +125,7 @@ be of use to Perl beginners:
 <li><a href="http://learn.perl.org/">learn.perl.org</a></li>
 <li><a href="http://learn.perl.org/books/beginning-perl/">Beginning Perl</a> - a
 book by Simon Cozens, available completely free online</li>
-<li><a href="http://perlmaven.com/perl-tutorial">Perl
+<li><a href="https://perlmaven.com/perl-tutorial">Perl
 Maven Tutorial</a> - Perl tutorial by Gabor Szabo</li>
 <li><a href="http://perldoc.perl.org/">perldoc</a> - the Perl documentation
 online</li>
