Fix usage of gen command in Quickstart.
Thanks to Stephen Hall for reporting.

--- a/views/quickstart.tt
+++ b/views/quickstart.tt
@@ -33,7 +33,7 @@ dancer is shipped with a helper that can scaffold a new skeleton for you.
 </p>
 
 <pre class="console">
-$ dancer2 -a MyWeb::App
+$ dancer2 gen -a MyWeb::App
 + MyWeb-App
 + MyWeb-App/config.yml
 + MyWeb-App/cpanfile
